# ScriptShield

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: architecture.md  dependencies.md  limitations.md
scripts/: __init__.py  verify_dependencies.py
src/obfuscator/: __init__.py  main.py
src/obfuscator/core/: __init__.py  config.py  dependency_graph.py  obfuscation_engine.py  orchestrator.py  output_writer.py  profile_manager.py  runtime_manager.py  symbol_table.py
tests/core/: __init__.py  conftest.py  test_dependency_graph.py  test_orchestrator_full_pipeline.py  test_orchestrator_mangle_globals.py  test_orchestrator_workflow.py  test_output_writer.py  test_runtime_manager.py  test_symbol_table.py
tests/processors/: __init__.py  test_advanced_features_integration.py  test_anti_debugging_transformer.py  test_code_splitting_transformer.py  test_constant_array_transformer.py  test_control_flow_flattening_transformer.py  test_dead_code_injection_transformer.py  test_integration.py  test_lua_constant_array.py  test_lua_mangle_indexes.py  test_lua_name_mangling_integration.py  test_lua_number_obfuscation.py  test_lua_processor.py  test_lua_string_encryption.py  test_lua_vm_protection.py  test_mangle_indexes_transformer.py  test_name_mangling_edge_cases.py  test_number_obfuscation_transformer.py  test_obfuscation_engine.py  test_opaque_predicates_transformer.py  test_python_attribute_contexts.py  test_python_name_mangling_integration.py  test_roblox_exploit_defense.py  test_roblox_remote_spy.py  test_runtime_integration.py  test_self_modifying_code_transformer.py  test_string_encryption_transformer.py  test_verification_fixes.py  test_vm_integration.py  test_vm_protection_transformer.py
tests/utils/: __init__.py  test_integration.py  test_logger.py  test_path_utils.py
(+40 files in other folders)
